--- a/clock2.html
+++ b/clock2.html
@@ -23,6 +23,9 @@
       <div class="seconds">
         <span id="seconds">00</span>
       </div>
+      <div class="ampm">
+        <span id="ampm"></span>
+      </div>
     </div>
     <script src="clock2.js"></script>
   </body>
